hphp/test/zend/good/tests/classes/autoload/autoload_003.php
<?hh
<<__EntryPoint>>
function entrypoint_autoload_003(): void {

  var_dump(class_exists('autoload_derived'));

  echo "===DONE===\n";
}
